2002-01-09  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-file.c: (make_valid_utf8),
	(nautilus_file_get_display_name), (nautilus_file_get_name): First
	cut at ensuring file names are always valid UTF-8. We probably
	need other checks like this for various other places we read in
	external stuff. Also, we might later decide to cache the "made
	valid" name. Finally, we might want to support the glib
	G_BROKEN_FILENAMES feature.

2002-01-09  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-directory-view.c:
	(fm_directory_view_destroy), (fm_directory_view_finalize),
	(fm_directory_view_class_init):
	* src/file-manager/fm-icon-view.c: (fm_icon_view_finalize),
	(fm_icon_view_class_init):
	* src/file-manager/fm-list-view.c: (fm_list_view_class_init),
	(fm_list_view_finalize):
	Some destroy/finalize fixes.

2002-01-08  Darin Adler  <darin@bentspoon.com>

	* Makefile.am: Remove a stray reference to nautilus-help.desktop.

2002-01-08  Darin Adler  <darin@bentspoon.com>

	* TODO: Mention bad looking text.

	* libnautilus-private/nautilus-icon-container.c: (destroy),
	(finalize), (nautilus_icon_container_init), (item_event_callback),
	(nautilus_icon_container_clear):
	Various fixes to make destroy on a NautilusIconContainer work.

	* components/tree/nautilus-tree-view-dnd.c:
	(nautilus_tree_view_drag_motion), (nautilus_tree_view_drag_drop),
	(nautilus_tree_view_button_press),
	(nautilus_tree_view_button_release),
	(nautilus_tree_view_motion_notify):
	* libnautilus-private/nautilus-undo-signal-handlers.c:
	(editable_key_press_event):
	* src/nautilus-bookmarks-window.c: (handle_close_accelerator):
	Remove unneeded stop_emit-type calls, now that the signal machinery
	understands that TRUE means to stop emitting in some cases.

2002-01-08  Darin Adler  <darin@bentspoon.com>

	* .cvsignore:
	* Makefile.am:
	* nautilus-help.desktop.in: Remove.
	Remove nautilus-help.desktop since Nautilus isn't the help browser
	any more.
	