@@ -1,3 +1,7 @@
+2002-01-15  Johan Dahlin  <jdahlin@telia.com>
+
+	* src/nautilus-bookmarks-window.c: Port to GtkTreeView.
+
 2002-01-09  Darin Adler  <darin@bentspoon.com>
 
 	* libnautilus-private/nautilus-file.c: (make_valid_utf8),
